[package]
name = "common_math"
version = "0.0.1"
authors = ["Banzobotic"]
license-file = "LICENCE.txt"
description = "A collection of common math functions"
categories = ["mathematics"]
keywords = ["round", "math", "util", "common"]
readme = "README.md"
include = [
    "/src/**",
    "/Cargo.toml",
    "/README.md",
]
edition = "2021"
